# visfit

./: .gitignore  example.ipynb  example.py  pyproject.toml
tests/: test_visfit.py
visfit/: emcee.py  main.py  utils.py
